kubernetes/apps/external-endpoints/services/app/pfsense/endpointslice.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: pfsense
  labels:
    kubernetes.io/service-name: pfsense
addressType: IPv4
endpoints:
  - addresses:
      - 172.16.99.1
    conditions:
      ready: true
      serving: true
      terminating: false
ports:
  - name: https
    port: 10443
    protocol: TCP
    appProtocol: https
