kubernetes/apps/external-endpoints/services/app/pfsense/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pfsense
  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |-
      url: "https://pfsense.dcunha.io"
      group: external-endpoints
      interval: 1m
      conditions:
        - "[STATUS] == 200"
spec:
  ports:
    - name: https
      port: 10443
      protocol: TCP
      targetPort: 10443
      appProtocol: https
  clusterIP: None
