kubernetes/apps/external-endpoints/services/app/pfsense/backendtrafficpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.nerdz.cloud/gateway.envoyproxy.io/backendtrafficpolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: pfsense-backend
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: pfsense
  useClientProtocol: true
  connection:
    bufferLimit: 8Mi
  timeout:
    http:
      requestTimeout: 0s
      connectionIdleTimeout: 3600s
